Multidecision waves central logic
